--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-
+    
+    <h1>Titulo Javascript</h1>
     <script src="script.js"></script>
     
 </body>
